gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail4375d.d
version https://git-lfs.github.com/spec/v1
oid sha256:f94c011aff71f5770838b20eaa4b509d8d34491e542472af5d01e04016762436
size 449
